--- a/Badumtsss/Badumtsss/Badumtsss/Badumtsss.csproj
+++ b/Badumtsss/Badumtsss/Badumtsss/Badumtsss.csproj
@@ -107,6 +107,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Objects\Obstacle.cs" />
+    <Compile Include="Objects\RotatedRectangle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
